# cream

./: .gitignore  CMakeLists.txt  README.md  makefile
examples/basic/: layer.hpp  main.cpp
examples/basic/components/: render.hpp  transform.hpp
examples/basic/systems/: render.hpp
include/libecs/: ecs.hpp  entity.hpp  store.hpp
src/: main.cpp
src/cream/: colour.hpp  cream.hpp  ecs.hpp  engine.cpp  engine.hpp  input.cpp  input.hpp  keys.hpp  texture.cpp  texture.hpp
src/cream/camera/: camera.hpp  fps.hpp  topdown.hpp
src/cream/events/: event.hpp  keyboard-event.hpp  mouse-event.hpp  window-event.hpp
src/cream/layers/: layer-manager.cpp  layer-manager.hpp  layer.hpp
src/cream/logging/: logger.cpp  logging.hpp
src/cream/models/: materials.cpp  materials.hpp  mesh.cpp  mesh.hpp
src/cream/programs/: programs.cpp  programs.hpp
src/cream/renderer/: renderer2d.cpp  renderer2d.hpp
src/cream/rendering/: camera-fps.cpp  camera.cpp  camera.hpp  instance.cpp  instance.hpp  line.cpp  line.hpp  model.cpp  model.hpp  tmodel.cpp  tmodel.hpp
src/cream/shaders/: shaders.cpp  shaders.hpp
src/cream/utilities/: utilities.cpp  utilities.hpp
src/cream/window/: linux-window.cpp  linux-window.hpp  window.hpp
